--- a/backend/package.json
+++ b/backend/package.json
@@ -18,12 +18,13 @@
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mailer": "^0.6.7",
+    "mailer": "^0.6.6",
     "mongodb": "^7.1.0",
-    "mongoose": "^9.2.1",
+    "mongoose": "^8.23.0",
     "morgan": "^1.10.1",
     "nodemailer": "^8.0.1",
     "nodemon": "^3.1.14",
+    "supabase": "^2.76.15",
     "validator": "^13.15.26"
   }
 }
